--- a/node/stripe/package.json
+++ b/node/stripe/package.json
@@ -4,8 +4,7 @@
   "description": "middleware to work with Stripe payment API",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +13,5 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "stripe": "^17.5.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0"
   }
 }
