updated stripe stack

--- a/node/stripe/Dockerfile
+++ b/node/stripe/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:alpine
 WORKDIR /node/app
-COPY package.json ./services ./frontend ./
+COPY package.json ./
+COPY ./services ./services
+COPY ./frontend ./frontend
 RUN npm i
 ENTRYPOINT [ "node" ]
