--- a/node/stripe/package.json
+++ b/node/stripe/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "middleware to work with Stripe payment API",
   "scripts": {
-    "payment": "nodemon ./services/payment/server.js",
-    "webhook": "nodemon ./services/webhook/server.js",
-    "server-payment": "node ./services/payment/server.js",
-    "server-webhook": "node ./services/webhook/server.js"
+    "payment": "nodemon ./services/payment/payment.js",
+    "webhook": "nodemon ./services/webhook/webhook.js",
+    "server-payment": "pm2 start ./services/payment/payment.js",
+    "server-webhook": "pm2 start ./services/webhook/webhook.js",
+    "logs": "pm2 logs"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "pm2": "^5.4.3",
     "stripe": "^17.5.0"
   }
 }
