--- a/go/test-server/stack-files/postgres.yaml
+++ b/go/test-server/stack-files/postgres.yaml
@@ -1,6 +1,25 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  name: postgres-init-script
+data:
+  init.sql: |
+    CREATE TABLE IF NOT EXISTS Users (
+        userID SERIAL PRIMARY KEY,
+        tokenBalance INT DEFAULT 10,
+        subscriptionType TEXT DEFAULT 'default'
+    );
+
+    INSERT INTO Users (userID, tokenBalance, subscriptionType)
+    VALUES (1, 10, 'default')
+    ON CONFLICT (userID) DO NOTHING;
+    INSERT INTO Users (userID, tokenBalance, subscriptionType)
+    VALUES (2, 10, 'AI')
+    ON CONFLICT (userID) DO NOTHING;
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
   name: postgres-config
   labels:
     app: meme-generator
@@ -64,10 +83,15 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgres-storage
+            - name: init-script
+              mountPath: /docker-entrypoint-initdb.d
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
             claimName: postgres-pvc
+        - name: init-script
+          configMap:
+            name: postgres-init-script
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
