--- a/python/trading-momemtum-arbitrage/requirements.txt
+++ b/python/trading-momemtum-arbitrage/requirements.txt
@@ -2,4 +2,5 @@ dotenv
 requests
 bs4
 google-generativeai
+websockets
 py_vollib==1.0.1  # After install, patch py_lets_be_rational/constants.py to remove _testcapi
