updated python requirements

--- a/python/trading-momemtum-arbitrage/requirements.txt
+++ b/python/trading-momemtum-arbitrage/requirements.txt
@@ -3,4 +3,4 @@ requests
 bs4
 google-generativeai
 websockets
-py_vollib==1.0.1  # After install, patch py_lets_be_rational/constants.py to remove _testcapi
+py_vollib # ==1.0.1   After install, patch py_lets_be_rational/constants.py to remove _testcapi
